--- a/index.html
+++ b/index.html
@@ -6,5 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Uzduotis-ENEBA</title>
   </head>
-  <body></body>
+  <body>
+    <main>
+      <section class="ads-banner">
+        <div>
+          <img src="./images/pictures/ads-banner/MHWilds_normal.png" alt="" />
+        </div>
+        <!--  -->
+        <div>
+          <img src="./images/pictures/ads-banner/surfshark.png" alt="" />
+        </div>
+        <!--  -->
+        <div>
+          <img src="./images/pictures/ads-banner/psn.jpg" alt="" />
+        </div>
+        <!--  -->
+        <div>
+          <img src="./images/pictures/ads-banner/roblox.jpg" alt="" />
+        </div>
+      </section>
+    </main>
+  </body>
 </html>
