adds navigation carousel

--- a/index.html
+++ b/index.html
@@ -25,6 +25,66 @@
           <img src="./images/pictures/ads-banner/roblox.jpg" alt="" />
         </div>
       </section>
+      <div class="top-carousel-wrapper">
+        <nav>
+          <button>
+            <img src="./images/icons/top-carousel/btn-left.svg" alt="" />
+          </button>
+          <a href="#"
+            ><img
+              src="./images/icons/top-carousel/games.svg"
+              alt=""
+            />Žaidimai</a
+          >
+          <a href="#"
+            ><img
+              src="./images/icons/top-carousel/games-card.svg"
+              alt=""
+            />Žaid. kortelės</a
+          >
+          <a href="#"
+            ><img src="./images/icons/top-carousel/gift-card.svg" alt="" />
+            eDovanų kortelės</a
+          >
+          <a href="#"
+            ><img src="./images/icons/top-carousel/e-money.svg" alt="" />E-money
+            kortelės</a
+          >
+          <a href="#"
+            ><img src="./images/icons/top-carousel/steam.svg" alt="" />Steam</a
+          >
+          <a href="#"
+            ><img
+              src="./images/icons/top-carousel/steam-extension.svg"
+              alt=""
+            />Steam papildymai</a
+          >
+          <a href="#"
+            ><img src="./images/icons/top-carousel/psn.svg" alt="" />PSN</a
+          >
+          <a href="#"
+            ><img src="./images/icons/top-carousel/xbox.svg" alt="" />Xbox</a
+          >
+          <a href="#"
+            ><img src="./images/icons/top-carousel/fifa.svg" alt="" />FIFA</a
+          >
+          <a href="#"
+            ><img
+              src="./images/icons/top-carousel/fortnite.svg"
+              alt=""
+            />Fortnite</a
+          >
+          <a href="#"
+            ><img
+              src="./images/icons/top-carousel/amazon.svg"
+              alt=""
+            />Amazon</a
+          >
+          <button>
+            <img src="./images/icons/top-carousel/btn-right.svg" alt="" />
+          </button>
+        </nav>
+      </div>
     </main>
   </body>
 </html>
