--- a/index.html
+++ b/index.html
@@ -6,5 +6,69 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Uzduotis-ENEBA</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <div class="header-top">
+        <img
+          class="eneba-logo"
+          src="https://static.eneba.games/branding/v2/logoFull.svg"
+          alt="eneba logo"
+        />
+        <div class="searchbar">
+          <img
+            class="header-white-svg"
+            src="./images/icons/header/search-line-icon.svg"
+            alt="search"
+          />
+          <input
+            type="text"
+            placeholder="Ieskoti zaidimu, papildymu ir daugiau"
+          />
+        </div>
+        <button class="header-svg-button">
+          <img
+            class="header-flag"
+            src="./images/icons/header/flag-for-lithuania.svg"
+            alt="flag"
+          />
+          Lietuviu <span class="strip"></span> EUR
+        </button>
+        <img
+          class="header-white-svg"
+          src="./images/icons/header/heart.svg"
+          alt="heart"
+        />
+        <img
+          class="header-white-svg"
+          src="./images/icons/header/cart-shopping-svgrepo-com.svg"
+          alt="cart"
+        />
+        <button class="header-svg-button">
+          <img
+            class="header-white-svg"
+            src="./images/icons/header/user-alt-1-svgrepo-com.svg"
+            alt="user"
+          />
+          Prisijungti
+          <span class="strip"></span> Registruotis
+        </button>
+        <button class="header-button">Parduoti</button>
+      </div>
+      <div class="header-bottom">
+        <button class="header-bottom-button">
+          <img
+            class="header-white-svg"
+            src="./images/icons/header/burger-menu-svgrepo-com.svg"
+            alt="burger button"
+          />
+          Kategorijos
+        </button>
+        <button class="header-bottom-button">Pigus zaidimai</button>
+        <button class="header-bottom-button">Monster Hunter Wilds</button>
+        <button class="header-bottom-button">GTA V</button>
+        <button class="header-bottom-button">Eneba Papildymai</button>
+        <button class="header-bottom-button">100 % club</button>
+      </div>
+    </header>
+  </body>
 </html>
