--- a/index.html
+++ b/index.html
@@ -8,145 +8,170 @@
   </head>
   <body>
     <header>
-      <div class="header-top">
-        <img
-          class="eneba-logo"
-          src="https://static.eneba.games/branding/v2/logoFull.svg"
-          alt="eneba logo"
-        />
-        <div class="searchbar">
+      <div class="header-top-bg">
+        <div class="header-top">
+          <img
+            class="eneba-logo"
+            src="https://static.eneba.games/branding/v2/logoFull.svg"
+            alt="eneba logo"
+          />
+          <div class="searchbar">
+            <img
+              class="header-white-svg"
+              src="./images/icons/header/search-line-icon.svg"
+              alt="search"
+            />
+            <input
+              type="text"
+              placeholder="Ieskoti zaidimu, papildymu ir daugiau"
+            />
+          </div>
+          <button class="header-svg-button">
+            <img
+              class="header-flag"
+              src="./images/icons/header/flag-for-lithuania.svg"
+              alt="flag"
+            />
+            Lietuviu <span class="strip"></span> EUR
+          </button>
           <img
             class="header-white-svg"
-            src="./images/icons/header/search-line-icon.svg"
-            alt="search"
+            src="./images/icons/header/heart-svgrepo-com.svg"
+            alt="heart"
           />
-          <input
-            type="text"
-            placeholder="Ieskoti zaidimu, papildymu ir daugiau"
+          <img
+            class="header-white-svg"
+            src="./images/icons/header/cart-shopping-svgrepo-com.svg"
+            alt="cart"
           />
+          <button class="header-svg-button">
+            <img
+              class="header-white-svg"
+              src="./images/icons/header/user-alt-1-svgrepo-com.svg"
+              alt="user"
+            />
+            Prisijungti
+            <span class="strip"></span> Registruotis
+          </button>
+          <button class="header-button">Parduoti</button>
         </div>
-        <button class="header-svg-button">
-          <img
-            class="header-flag"
-            src="./images/icons/header/flag-for-lithuania.svg"
-            alt="flag"
-          />
-          Lietuviu <span class="strip"></span> EUR
-        </button>
-        <img
-          class="header-white-svg"
-          src="./images/icons/header/heart-svgrepo-com.svg"
-          alt="heart"
-        />
-        <img
-          class="header-white-svg"
-          src="./images/icons/header/cart-shopping-svgrepo-com.svg"
-          alt="cart"
-        />
-        <button class="header-svg-button">
-          <img
-            class="header-white-svg"
-            src="./images/icons/header/user-alt-1-svgrepo-com.svg"
-            alt="user"
-          />
-          Prisijungti
-          <span class="strip"></span> Registruotis
-        </button>
-        <button class="header-button">Parduoti</button>
       </div>
-      <div class="header-bottom">
-        <button class="header-bottom-button">
-          <img
-            class="header-white-svg"
-            src="./images/icons/header/burger-menu-svgrepo-com.svg"
-            alt="burger button"
-          />
-          Kategorijos
-        </button>
-        <button class="header-bottom-button">Pigus zaidimai</button>
-        <button class="header-bottom-button">Monster Hunter Wilds</button>
-        <button class="header-bottom-button">GTA V</button>
-        <button class="header-bottom-button">Eneba Papildymai</button>
-        <button class="header-bottom-button">100 % club</button>
+      <div class="header-bottom-bg">
+        <div class="header-bottom">
+          <button class="header-bottom-button">
+            <img
+              class="header-white-svg"
+              src="./images/icons/header/burger-menu-svgrepo-com.svg"
+              alt="burger button"
+            />
+            Kategorijos
+          </button>
+          <button class="header-bottom-button">Pigus zaidimai</button>
+          <button class="header-bottom-button">Monster Hunter Wilds</button>
+          <button class="header-bottom-button">GTA V</button>
+          <button class="header-bottom-button">Eneba Papildymai</button>
+          <button class="header-bottom-button">100 % club</button>
+        </div>
       </div>
     </header>
+
     <main>
-      <section class="ads-banner">
-        <div>
-          <img src="./images/pictures/ads-banner/MHWilds_normal.png" alt="" />
+      <div class="margin-wrapper">
+        <div class="content-wrapper">
+          <section class="ads-banner-wrapper">
+            <div class="ads-banner-items">
+              <div>
+                <img
+                  src="./images/pictures/ads-banner/MHWilds_normal.png"
+                  alt=""
+                />
+              </div>
+              <!--  -->
+              <div>
+                <img src="./images/pictures/ads-banner/surfshark.png" alt="" />
+              </div>
+              <!--  -->
+              <div>
+                <img src="./images/pictures/ads-banner/psn.jpg" alt="" />
+              </div>
+              <!--  -->
+              <div>
+                <img src="./images/pictures/ads-banner/roblox.jpg" alt="" />
+              </div>
+            </div>
+          </section>
+          <div class="top-carousel-wrapper">
+            <nav>
+              <button>
+                <img src="./images/icons/top-carousel/btn-left.svg" alt="" />
+              </button>
+              <a href="#"
+                ><img
+                  src="./images/icons/top-carousel/games.svg"
+                  alt=""
+                />Žaidimai</a
+              >
+              <a href="#"
+                ><img
+                  src="./images/icons/top-carousel/games-card.svg"
+                  alt=""
+                />Žaid. kortelės</a
+              >
+              <a href="#"
+                ><img src="./images/icons/top-carousel/gift-card.svg" alt="" />
+                eDovanų kortelės</a
+              >
+              <a href="#"
+                ><img
+                  src="./images/icons/top-carousel/e-money.svg"
+                  alt=""
+                />E-money kortelės</a
+              >
+              <a href="#"
+                ><img
+                  src="./images/icons/top-carousel/steam.svg"
+                  alt=""
+                />Steam</a
+              >
+              <a href="#"
+                ><img
+                  src="./images/icons/top-carousel/steam-extension.svg"
+                  alt=""
+                />Steam papildymai</a
+              >
+              <a href="#"
+                ><img src="./images/icons/top-carousel/psn.svg" alt="" />PSN</a
+              >
+              <a href="#"
+                ><img
+                  src="./images/icons/top-carousel/xbox.svg"
+                  alt=""
+                />Xbox</a
+              >
+              <a href="#"
+                ><img
+                  src="./images/icons/top-carousel/fifa.svg"
+                  alt=""
+                />FIFA</a
+              >
+              <a href="#"
+                ><img
+                  src="./images/icons/top-carousel/fortnite.svg"
+                  alt=""
+                />Fortnite</a
+              >
+              <a href="#"
+                ><img
+                  src="./images/icons/top-carousel/amazon.svg"
+                  alt=""
+                />Amazon</a
+              >
+              <button>
+                <img src="./images/icons/top-carousel/btn-right.svg" alt="" />
+              </button>
+            </nav>
+          </div>
         </div>
-        <!--  -->
-        <div>
-          <img src="./images/pictures/ads-banner/surfshark.png" alt="" />
-        </div>
-        <!--  -->
-        <div>
-          <img src="./images/pictures/ads-banner/psn.jpg" alt="" />
-        </div>
-        <!--  -->
-        <div>
-          <img src="./images/pictures/ads-banner/roblox.jpg" alt="" />
-        </div>
-      </section>
-      <div class="top-carousel-wrapper">
-        <nav>
-          <button>
-            <img src="./images/icons/top-carousel/btn-left.svg" alt="" />
-          </button>
-          <a href="#"
-            ><img
-              src="./images/icons/top-carousel/games.svg"
-              alt=""
-            />Žaidimai</a
-          >
-          <a href="#"
-            ><img
-              src="./images/icons/top-carousel/games-card.svg"
-              alt=""
-            />Žaid. kortelės</a
-          >
-          <a href="#"
-            ><img src="./images/icons/top-carousel/gift-card.svg" alt="" />
-            eDovanų kortelės</a
-          >
-          <a href="#"
-            ><img src="./images/icons/top-carousel/e-money.svg" alt="" />E-money
-            kortelės</a
-          >
-          <a href="#"
-            ><img src="./images/icons/top-carousel/steam.svg" alt="" />Steam</a
-          >
-          <a href="#"
-            ><img
-              src="./images/icons/top-carousel/steam-extension.svg"
-              alt=""
-            />Steam papildymai</a
-          >
-          <a href="#"
-            ><img src="./images/icons/top-carousel/psn.svg" alt="" />PSN</a
-          >
-          <a href="#"
-            ><img src="./images/icons/top-carousel/xbox.svg" alt="" />Xbox</a
-          >
-          <a href="#"
-            ><img src="./images/icons/top-carousel/fifa.svg" alt="" />FIFA</a
-          >
-          <a href="#"
-            ><img
-              src="./images/icons/top-carousel/fortnite.svg"
-              alt=""
-            />Fortnite</a
-          >
-          <a href="#"
-            ><img
-              src="./images/icons/top-carousel/amazon.svg"
-              alt=""
-            />Amazon</a
-          >
-          <button>
-            <img src="./images/icons/top-carousel/btn-right.svg" alt="" />
-          </button>
-        </nav>
       </div>
     </main>
   </body>
