--- a/index.html
+++ b/index.html
@@ -174,5 +174,19 @@
         </div>
       </div>
     </main>
+    <section class="new-game-consoles">
+      <div class="sides">
+        <div class="header-of-content">
+          <h1>Naujausi žaidėjų skelbimai</h1>
+        </div>
+        <div class="new-game-consoles-top">
+          <a href="#"> <img src="./images/icons/gamers-posts-items/games.svg" alt="" /> ZAIDIMAI</a>
+          <a href="#"> <img src="./images/icons/gamers-posts-items/consoles.svg" alt="" /> ZAIDIMAI</a>
+          <a href="#"> <img src="./images/icons/gamers-posts-items/accessories.svg" alt="" /> ZAIDIMAI</a>
+          <a href="#"> <img src="./images/icons/gamers-posts-items/combo.svg" alt="" /> ZAIDIMAI</a>
+          <a href="#"> <img src="./images/icons/gamers-posts-items/pc-mobile.svg" alt="" /> ZAIDIMAI</a>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
