created card item

--- a/index.html
+++ b/index.html
@@ -180,11 +180,42 @@
           <h1>Naujausi žaidėjų skelbimai</h1>
         </div>
         <div class="new-game-consoles-top">
-          <a href="#"> <img src="./images/icons/gamers-posts-items/games.svg" alt="" /> ZAIDIMAI</a>
-          <a href="#"> <img src="./images/icons/gamers-posts-items/consoles.svg" alt="" /> ZAIDIMAI</a>
-          <a href="#"> <img src="./images/icons/gamers-posts-items/accessories.svg" alt="" /> ZAIDIMAI</a>
-          <a href="#"> <img src="./images/icons/gamers-posts-items/combo.svg" alt="" /> ZAIDIMAI</a>
-          <a href="#"> <img src="./images/icons/gamers-posts-items/pc-mobile.svg" alt="" /> ZAIDIMAI</a>
+          <a href="#">
+            <img src="./images/icons/gamers-posts-items/games.svg" alt="" />
+            ZAIDIMAI</a
+          >
+          <a href="#">
+            <img src="./images/icons/gamers-posts-items/consoles.svg" alt="" />
+            ZAIDIMAI</a
+          >
+          <a href="#">
+            <img
+              src="./images/icons/gamers-posts-items/accessories.svg"
+              alt=""
+            />
+            ZAIDIMAI</a
+          >
+          <a href="#">
+            <img src="./images/icons/gamers-posts-items/combo.svg" alt="" />
+            ZAIDIMAI</a
+          >
+          <a href="#">
+            <img src="./images/icons/gamers-posts-items/pc-mobile.svg" alt="" />
+            ZAIDIMAI</a
+          >
+        </div>
+      </div>
+      <div class="card-wrapper">
+        <div class="card-image">
+          <img src="./images/pictures/ads.jpg" alt="" />
+        </div>
+        <div class="card-content-wrapper">
+          <div class="card-content">
+            <h4>Kortelės pavadinimas</h3>
+            <h5>Buklė:<span class="condition"> Naujas</span></h4>
+            <p class="price">20.99 €</p>
+            <p class="delivery">Pristatymas nuo +1.69 €</p>
+          </div>
         </div>
       </div>
     </section>
