--- a/index.html
+++ b/index.html
@@ -175,36 +175,7 @@
       </div>
     </main>
     <section class="new-game-consoles">
-      <div class="sides">
-        <div class="header-of-content">
-          <h1>Naujausi žaidėjų skelbimai</h1>
-        </div>
-        <div class="new-game-consoles-top">
-          <a href="#">
-            <img src="./images/icons/gamers-posts-items/games.svg" alt="" />
-            ZAIDIMAI</a
-          >
-          <a href="#">
-            <img src="./images/icons/gamers-posts-items/consoles.svg" alt="" />
-            ZAIDIMAI</a
-          >
-          <a href="#">
-            <img
-              src="./images/icons/gamers-posts-items/accessories.svg"
-              alt=""
-            />
-            ZAIDIMAI</a
-          >
-          <a href="#">
-            <img src="./images/icons/gamers-posts-items/combo.svg" alt="" />
-            ZAIDIMAI</a
-          >
-          <a href="#">
-            <img src="./images/icons/gamers-posts-items/pc-mobile.svg" alt="" />
-            ZAIDIMAI</a
-          >
-        </div>
-      </div>
+
       <div class="card-wrapper">
         <div class="card-image">
           <img src="./images/pictures/ads.jpg" alt="" />
@@ -216,8 +187,58 @@
             <p class="price">20.99 €</p>
             <p class="delivery">Pristatymas nuo +1.69 €</p>
           </div>
+      <div class="header-of-content">
+        <h1>Naujausi žaidėjų skelbimai</h1>
+      </div>
+      <div class="new-game-consoles-top">
+        <a href="#">
+          <img src="./images/icons/gamers-posts-items/games.svg" alt="" />
+          ZAIDIMAI</a
+        >
+        <a href="#">
+          <img src="./images/icons/gamers-posts-items/consoles.svg" alt="" />
+          KONSOLES</a
+        >
+        <a href="#">
+          <img src="./images/icons/gamers-posts-items/accessories.svg" alt="" />
+          PRIEDAI</a
+        >
+        <a href="#">
+          <img src="./images/icons/gamers-posts-items/combo.svg" alt="" />
+          RINKINIAI</a
+        >
+        <a href="#">
+          <img src="./images/icons/gamers-posts-items/pc-mobile.svg" alt="" />
+          PC IR MOBILIEJI</a
+        >
+      </div>
+      <div class="new-game-consoles-bottom">
+        <img src="./images/icons/consoles/ps5.svg" alt="ps5" />
+        <img src="./images/icons/consoles/ps4.svg" alt="ps4" />
+        <img src="./images/icons/consoles/ps3.svg" alt="ps3" />
+        <img src="./images/icons/consoles/xs.svg" alt="xs" />
+        <img src="./images/icons/consoles/xboxone.svg" alt="xboxone" />
+        <img src="./images/icons/consoles/xbox360.svg" alt="xbox360" />
+        <img src="./images/icons/consoles/nintendo.svg" alt="nintendo" />
+        <img src="./images/icons/consoles/retro.svg" alt="retro" />
+        <div class="little-tower"></div>
+        <div class="text-column">
+          <div>Perziureti</div>
+          <div>viska</div>
         </div>
       </div>
+      
+      <div class="card-wrapper">
+        <div class="card-image">
+          <img src="./images/pictures/ads.jpg" alt="" />
+        </div>
+        <div class="card-content-wrapper">
+          <div class="card-content">
+            <h4>Kortelės pavadinimas</h3>
+            <h5>Buklė:<span class="condition"> Naujas</span></h4>
+            <p class="price">20.99 €</p>
+            <p class="delivery">Pristatymas nuo +1.69 €</p>
+          </div>
     </section>
   </body>
 </html>
