--- a/index.html
+++ b/index.html
@@ -175,18 +175,6 @@
       </div>
     </main>
     <section class="new-game-consoles">
-
-      <div class="card-wrapper">
-        <div class="card-image">
-          <img src="./images/pictures/ads.jpg" alt="" />
-        </div>
-        <div class="card-content-wrapper">
-          <div class="card-content">
-            <h4>Kortelės pavadinimas</h3>
-            <h5>Buklė:<span class="condition"> Naujas</span></h4>
-            <p class="price">20.99 €</p>
-            <p class="delivery">Pristatymas nuo +1.69 €</p>
-          </div>
       <div class="header-of-content">
         <h1>Naujausi žaidėjų skelbimai</h1>
       </div>
@@ -227,18 +215,79 @@
           <div>viska</div>
         </div>
       </div>
-      
-      <div class="card-wrapper">
-        <div class="card-image">
-          <img src="./images/pictures/ads.jpg" alt="" />
-        </div>
-        <div class="card-content-wrapper">
-          <div class="card-content">
-            <h4>Kortelės pavadinimas</h3>
-            <h5>Buklė:<span class="condition"> Naujas</span></h4>
-            <p class="price">20.99 €</p>
-            <p class="delivery">Pristatymas nuo +1.69 €</p>
+
+      <div class="card-warpper-width">
+        <div class="card-wrapper">
+          <div class="card">
+            <div class="card-image">
+              <img src="./images/pictures/ads.jpg" alt="" />
+            </div>
+            <div class="card-content-wrapper">
+              <div class="card-content">
+                <h3>Kortelės pavadinimas</h3>
+                <h5>Buklė:<span class="condition"> Naujas</span></h5>
+                <p class="price">20.99 €</p>
+                <p class="delivery">Pristatymas nuo +1.69 €</p>
+              </div>
+            </div>
           </div>
+          <div class="card">
+            <div class="card-image">
+              <img src="./images/pictures/ads.jpg" alt="" />
+            </div>
+            <div class="card-content-wrapper">
+              <div class="card-content">
+                <h3>Kortelės pavadinimas</h3>
+                <h5>Buklė:<span class="condition"> Naujas</span></h5>
+                <p class="price">20.99 €</p>
+                <p class="delivery">Pristatymas nuo +1.69 €</p>
+              </div>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-image">
+              <img src="./images/pictures/ads.jpg" alt="" />
+            </div>
+            <div class="card-content-wrapper">
+              <div class="card-content">
+                <h3>Kortelės pavadinimas</h3>
+                <h5>Buklė:<span class="condition"> Naujas</span></h5>
+                <p class="price">20.99 €</p>
+                <p class="delivery">Pristatymas nuo +1.69 €</p>
+              </div>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-image">
+              <img src="./images/pictures/ads.jpg" alt="" />
+            </div>
+            <div class="card-content-wrapper">
+              <div class="card-content">
+                <h3>Kortelės pavadinimas</h3>
+                <h5>Buklė:<span class="condition"> Naujas</span></h5>
+                <p class="price">20.99 €</p>
+                <p class="delivery">Pristatymas nuo +1.69 €</p>
+              </div>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-image">
+              <img src="./images/pictures/ads.jpg" alt="" />
+            </div>
+            <div class="card-content-wrapper">
+              <div class="card-content">
+                <h3>Kortelės pavadinimas</h3>
+                <h5>Buklė:<span class="condition"> Naujas</span></h5>
+                <p class="price">20.99 €</p>
+                <p class="delivery">Pristatymas nuo +1.69 €</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="button-sides">
+        <button class="content-button">Rodyti viska</button>
+      </div>
     </section>
   </body>
 </html>
