--- a/JS_atiskaitymas/index.html
+++ b/JS_atiskaitymas/index.html
@@ -10,13 +10,17 @@
 
 <body>
   <header>
-    <div class="container">
-      <h1>The Mysterious Shop</h1>
-      <p>Rare and Magical Items from Beyond the Veil</p>
-      <nav>
-        <a href="./index.html" class="active">Browse Catalog</a>
-        <a href="./add/index.html" class="add-item-btn">Add New Item</a>
-      </nav>
+    <div class="header-wrapper">
+      <div class="logo-wrapper">
+        <h1>The Mysterious Shop</h1>
+        <p>Rare and Magical Items from Beyond the Veil</p>
+      </div>
+      <div class="nav-wrapper">
+        <nav>
+          <a href="./index.html" class="active">Browse Catalog</a>
+          <a href="./add/index.html" class="add-item-btn">Add New Item</a>
+        </nav>
+      </div>
     </div>
   </header>
 
