fixes href errors

--- a/JS_atiskaitymas/index.html
+++ b/JS_atiskaitymas/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <header>
-    <div class="header-wrapper">
+    <div class="container header-wrapper">
       <div class="logo-wrapper">
         <h1>The Mysterious Shop</h1>
         <p>Rare and Magical Items from Beyond the Veil</p>
