removes empty message boxes

--- a/JS_atiskaitymas/add/index.html
+++ b/JS_atiskaitymas/add/index.html
@@ -61,8 +61,8 @@
         <button id="submit-btn" class="primary-btn">Conjure Item</button>
       </div>
 
-      <div id="success-message" class="message success-message"></div>
-      <div id="error-message" class="message error-message"></div>
+      <div id="success-message" class="message success-message" style="display: none;"></div>
+      <div id="error-message" class="message error-message" style="display: none;"></div>
     </div>
   </main>
 
