--- a/JS_atiskaitymas/product/index.html
+++ b/JS_atiskaitymas/product/index.html
@@ -48,7 +48,7 @@
           <button id="delete-btn" class="danger-btn">Banish This Item</button>
         </div>
       </div>
-      <div id="message" class="message"></div>
+      <div id="message" class="message" style="display: none;"></div>
     </div>
   </main>
 
