--- a/JS_atiskaitymas/product/index.html
+++ b/JS_atiskaitymas/product/index.html
@@ -9,56 +9,58 @@
 </head>
 
 <body>
-  <header>
-    <div class="container header-wrapper">
-      <div class="logo-wrapper">
-        <h1>The Mysterious Shop</h1>
-        <p>Rare and Magical Items from Beyond the Veil</p>
-      </div>
-      <div class="nav-wrapper">
-        <nav>
-          <a href="../index.html">Browse Catalog</a>
-          <a href="../add/index.html">Add New Item</a>
-        </nav>
-      </div>
-    </div>
-  </header>
-
-  <main class="container">
-    <div class="back-link">
-      <a href="../index.html">&larr; Back to Catalog</a>
-    </div>
-
-    <div class="product-details">
-      <div class="loading">Materializing item details...</div>
-      <div class="product-content" style="display: none;">
-        <div class="product-image">
-          <img id="img" src="" alt="Magical Item">
+  <div class="site-wrapper">
+    <header>
+      <div class="container header-wrapper">
+        <div class="logo-wrapper">
+          <h1>The Mysterious Shop</h1>
+          <p>Rare and Magical Items from Beyond the Veil</p>
         </div>
-        <div class="product-info">
-          <h1 id="title"></h1>
-          <div class="price-location">
-            <div class="price" id="price"></div>
-            <div class="location" id="location"></div>
-          </div>
-          <div class="description">
-            <h3>Mystical Properties:</h3>
-            <p id="description"></p>
-          </div>
-          <button id="delete-btn" class="danger-btn">Banish This Item</button>
+        <div class="nav-wrapper">
+          <nav>
+            <a href="../index.html">Browse Catalog</a>
+            <a href="../add/index.html">Add New Item</a>
+          </nav>
         </div>
       </div>
-      <div id="message" class="message" style="display: none;"></div>
-    </div>
-  </main>
+    </header>
 
-  <footer>
-    <div class="container">
-      <p>The Mysterious Shop &copy; 2025 - Not responsible for accidental transmutations or dimensional shifts</p>
-    </div>
-  </footer>
+    <main class="container">
+      <div class="back-link">
+        <a href="../index.html">&larr; Back to Catalog</a>
+      </div>
 
-  <script type="module" src="../js/product.js"></script>
+      <div class="product-details">
+        <div class="loading">Materializing item details...</div>
+        <div class="product-content" style="display: none;">
+          <div class="product-image">
+            <img id="img" src="" alt="Magical Item">
+          </div>
+          <div class="product-info">
+            <h1 id="title"></h1>
+            <div class="price-location">
+              <div class="price" id="price"></div>
+              <div class="location" id="location"></div>
+            </div>
+            <div class="description">
+              <h3>Mystical Properties:</h3>
+              <p id="description"></p>
+            </div>
+            <button id="delete-btn" class="danger-btn">Banish This Item</button>
+          </div>
+        </div>
+        <div id="message" class="message" style="display: none;"></div>
+      </div>
+    </main>
+
+    <footer>
+      <div class="container">
+        <p>The Mysterious Shop &copy; 2025 - Not responsible for accidental transmutations or dimensional shifts</p>
+      </div>
+    </footer>
+
+    <script type="module" src="../js/product.js"></script>
+    <div>
 </body>
 
 </html>
